<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_AddClass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/addImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/addButtonImage"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="90dp"
        android:text="@string/add_image_add_class"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addButtonChoose"
        app:layout_constraintTop_toBottomOf="@+id/addEditText" />

    <EditText
        android:id="@+id/addEditText"
        android:layout_width="244dp"
        android:layout_height="74dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter catname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImageView" />

    <ImageView
        android:id="@+id/addImageView"
        android:layout_width="284dp"
        android:layout_height="293dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/add_image_add_class"
        app:layout_constraintBottom_toTopOf="@+id/addButtonChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/addButtonChoose"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="90dp"
        android:text="@string/choose_image"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addButtonImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>