<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_quiz"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="545dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/quizButtonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/quizCounter"
        android:layout_width="62dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/quizImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quizScore"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/quizScore"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginBottom="631dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_quiz"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/quizImageView"
        android:layout_width="284dp"
        android:layout_height="364dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/catimage_quiz"
        app:layout_constraintBottom_toTopOf="@+id/quizEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/quizButtonCheck"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="90dp"
        android:text="@string/check_answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quizButtonNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizEditText" />

    <EditText
        android:id="@+id/quizEditText"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="Enter catname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizImageView" />

    <Button
        android:id="@+id/quizButtonNext"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="90dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:theme="@style/Button.Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quizButtonCheck"
        app:layout_constraintTop_toBottomOf="@+id/quizEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>